--- a/Topic-10-Confidence-Intervals-Mean.html
+++ b/Topic-10-Confidence-Intervals-Mean.html
@@ -396,7 +396,7 @@ $(document).ready(function(){
     }
 });
 </script>
-<link href="C:\LocalApps\R\library\kableExtra\lightable-0.0.1\lightable.css" rel="stylesheet" />
+<link href="C:\Users\Fei\AppData\Local\R\win-library\4.3\kableExtra\lightable-0.0.1\lightable.css" rel="stylesheet" />
 <script type="application/json" class="js-hypothesis-config">
   {
     "openSidebar": false
@@ -516,7 +516,6 @@ where the <strong>critical value</strong> is <a href="https://saylordotorg.githu
 </div>
 <hr />
 <h2 id="confidence-interval-with-known-population-sd"><span class="section-number">9.</span> Confidence Interval with Known Population SD</h2>
-<p>Suppose the population standard deviation \(\sigma\) is given.</p>
 <ul>
 <li>
 <p>Check if the central limit theorem applies: need \(n&gt;30\) or that the population distribution is approximately normal.</p>
@@ -525,7 +524,7 @@ where the <strong>critical value</strong> is <a href="https://saylordotorg.githu
 <p>Find the critical value \(z_{\alpha/2}\) for the given confidence level: \(z_{\alpha/2}=\) <code>=NORM.S.INV(0.5+confidence level/2)</code>.</p>
 </li>
 <li>
-<p>Find the standard error \(\text{SE}=\sigma_{\bar{x}}=\sigma/\sqrt{n}=\) <code>=(Population SD)/SQRT(Sample Size)</code>.</p>
+<p>Find the standard error \(\text{SE}=\sigma/\sqrt{n}=\) <code>=(Population SD)/SQRT(Sample Size)</code>.</p>
 </li>
 <li>
 <p>Calculate the marginal error E (or ME): \(E=\text{critical value}*\text{standard error}\).</p>
@@ -547,15 +546,15 @@ where the <strong>critical value</strong> is <a href="https://saylordotorg.githu
 <li>when the level of confidence is 90%;</li>
 <li>when the level of confidence is 98%.</li>
 </ol>
-<p><strong>Solution:</strong> One can find the critical value \(z_{\alpha/2}\) by using the normal distribution table. Here, we will use the Excel function <code>NORM.S.INV(prob)</code></p>
+<p><strong>Solution:</strong> To find the critical value \(z_{\alpha/2}\) with a given confidence level, the Excel function <code>=NORM.S.INV(0.5+confidence level/2)</code> can be used.</p>
 <ol>
 <li>
-<p>Using Excel function NORM.S.INV((1+0.9)/2), we get the critical value
-$$z_{\alpha/2}=1.6449.$$</p>
+<p>At the 90% level of confidence the critical value is</p>
+<p>\(z_{\alpha/2}=\) <code>=NORM.S.INV(0.5+0.9/2)</code> \(=1.6449\).</p>
 </li>
 <li>
-<p>Using the Excel function <code>NORM.S.INV(0.5+0.98/2)</code>, we get the critical value
-$$z_{\alpha/2}=2.3263.$$</p>
+<p>At the 98% level of confidence the critical value is</p>
+<p>\(z_{\alpha/2}=\) <code>=NORM.S.INV(0.5+0.9/2)</code> \(=2.3263\).</p>
 </li>
 </ol>
 <div class="footmark">
@@ -577,12 +576,19 @@ $$z_{\alpha/2}=2.3263.$$</p>
 <ul>
 <li>The critical value \(z_{\alpha/2}\)=<code>NORM.S.INV(0.5+0.99/2)</code> \(\approx 2.576\)</li>
 <li>The standard error is \(\sigma_{\bar{x}}=\sigma/\sqrt{n}=0.43/\sqrt{50}\approx 0.06.\)</li>
+<li>The marginal error is \(\text{E}=z_{\alpha/2}\cdot\sigma_{\bar{x}}=2.576\cdot 0.06\approx 0.16.\)</li>
+<li>The left bound of the confidence interval is \(\bar{x}-\text{E}=2.51-0.16=2.35\) and the right bound is \(\bar{x}+\text{E}=2.51+0.16=2.67\).</li>
+<li>The marginal error is \(\text{E}=z_{\alpha/2}\cdot\sigma_{\bar{x}}=2.576\cdot 0.06\approx 0.16.\)</li>
+<li>The lower bound of the confidence interval is \(\bar{x}-\text{E}=2.51-0.16=2.35\).</li>
+<li>The upper bound of the confidence interval is \(\bar{x}+\text{E}=2.51+0.16=2.67\).</li>
 </ul>
-<p>Then the marginal error is \(\text{E}=z_{\alpha/2}\cdot\sigma_{\bar{x}}=2.576\cdot 0.06\approx 0.16.\) We can conclude with 99% confidence that the average GPA of all students is between \(2.51-0.16=2.35\) and \(2.51+0.16=2.67\).</p>
-<div class="footmark">
-<p><strong>Note:</strong> The marginal error \(E\) can also be obtained by the Excel function
-<code>CONFIDENCE.NORM(1-0.99, 0.43, 50)</code>.</p>
-</div>
+<p>Conclusion: With 99% confidence, we can assure that the average GPA of all students is between \(2.35\) and \(2.67\).
+Conclusion: With 99% confidence, we may conclude that the mean GPA of all students at the college is between 2.35 and 2.67.</p>
+<!-- ::: {.footmark}
+  **Note:** The marginal error $E$ can also be obtained by the Excel function
+  `CONFIDENCE.NORM(1-0.99, 0.43, 50)`.
+
+::: {.-->}
 <hr />
 <h2 id="student-s-t-distribution"><span class="section-number">13.</span> Student’s \(t\)-Distribution</h2>
 <ul>
@@ -637,7 +643,6 @@ $$z_{\alpha/2}=2.3263.$$</p>
 </div>
 <hr />
 <h2 id="confidence-intervals-with-unknown-population-sd"><span class="section-number">17.</span> Confidence Intervals with <span class="red">Unknown</span> Population SD</h2>
-<p>Suppose the population standard deviation is NOT given.</p>
 <ul>
 <li>
 <p>Check if the central limit theorem applies: need \(n&gt;30\) or that the population distribution is approximately normal.</p>
@@ -646,7 +651,7 @@ $$z_{\alpha/2}=2.3263.$$</p>
 <p>Find the critical value \(t_{\alpha/2}\) for the given confidence level using \(t\)-distribution: \(t_{\alpha/2}=\) <code>=T.INV(0.5+confidence level/2, n-1)</code>.</p>
 </li>
 <li>
-<p>Find the estimated standard error \(\text{SE}=\sigma_{\bar{x}}=s/\sqrt{n}=\) <code>=(Sample SD)/SQRT(Sample Size)</code>.</p>
+<p>Find the estimated standard error \(\text{SE}=s/\sqrt{n}=\) <code>=(Sample SD)/SQRT(Sample Size)</code>.</p>
 </li>
 <li>
 <p>Calculate the marginal error E (or ME): \(E=\text{critical value}*\text{standard error}\).</p>
